fixing hound comments on spacing in scss and routes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,5 @@
 */
 
 .menu .logo {
-  padding: 0px;
+  padding: 0;
 }
